--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,5 +1,6 @@
 .carousel-container {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -23,14 +24,10 @@
   white-space: normal;
 }
 .image-container {
-  width: 80%;
+  width: 90%;
   height: 100%;
   margin: 0;
   white-space: normal;
-}
-.image {
-  width: 100%;
-  height: 450px;
 }
 .description {
   margin-top: 5px;
@@ -55,15 +52,25 @@
   font-size: 1rem;
   font-weight: 100;
 }
+.title-icon {
+  margin: 0 0 5px 0;
+}
 .project-link-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  white-space: wrap;
+  width: 300px;
+  margin-top: 20px;
+}
+.link-figure {
+  margin: 0;
 }
 .project-link {
   text-decoration: none;
   color: black;
   font-size: 1rem;
+  width: 50%;
 }
 .project-link:hover {
   color: blue;
@@ -91,9 +98,13 @@
   opacity: 0;
 }
 .internet {
+  width: 28px;
+  height: 28px;
+  margin-bottom: 6px;
+}
+.github {
   width: 30px;
   height: 30px;
-  margin-bottom: 5px;
 }
 @media (hover: hover) {
   .arrow:hover .back {
@@ -113,68 +124,6 @@
     opacity: 1;
   }
 }
-/* @media only screen and (max-width: 320px) {
-  .carousel-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 2rem -2%;
-  }
-  .carousel-wrapper {
-    width: 100%;
-    user-select: none;
-  }
-  .slide {
-    display: inline-block;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 2rem;
-    padding-bottom: 10%;
-    white-space: normal;
-  }
-  .name {
-    font-size: 1.5rem;
-    font-weight: 400;
-  }
-  .description {
-    font-size: 0.9rem;
-    font-weight: 200;
-    width: 300px;
-  }
-  .image {
-    height: 53vw;
-  }
-  .title {
-    font-size: 1rem;
-    font-weight: 400;
-    margin-bottom: 5px;
-  }
-  .details {
-    font-size: 0.9rem;
-  }
-  .arrow {
-    height: 50px;
-    max-width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 20;
-  }
-  .back-arrow {
-    position: fixed;
-    top: 50%;
-    left: -70px;
-    color: black;
-  }
-  .next-arrow {
-    position: fixed;
-    top: 50%;
-    right: -70px;
-    color: black;
-  }
-} */
 @media only screen and (max-width: 568px) {
   .carousel-container {
     display: flex;
@@ -203,8 +152,8 @@
     font-weight: 200;
   }
   .image {
-    min-width: 300px;
-    height: 50vw;
+    width: 100%;
+    height: 60vw;
   }
   .title {
     font-size: 1rem;
@@ -213,6 +162,9 @@
   }
   .details {
     font-size: 0.9rem;
+  }
+  .project-link {
+    font-size: 0.8rem;
   }
   .arrow {
     height: 50px;
@@ -226,18 +178,18 @@
   }
   .back-arrow {
     position: fixed;
-    top: 50%;
-    left: -70px;
+    top: 64px;
+    left: -85px;
     color: black;
   }
   .next-arrow {
     position: fixed;
-    top: 50%;
-    right: -70px;
+    top: 64px;
+    right: -85px;
     color: black;
   }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 569px) and (max-width: 768px) {
   .carousel-container {
     display: flex;
     flex-direction: column;
@@ -267,7 +219,7 @@
   }
   .image {
     width: 100%;
-    height: 53vw;
+    height: 60vw;
   }
   .title {
     font-size: 1rem;
@@ -276,6 +228,9 @@
   }
   .details {
     font-size: 0.9rem;
+  }
+  .project-link-container {
+    width: 300px;
   }
   .arrow {
     height: 50px;
@@ -289,23 +244,22 @@
   }
   .back-arrow {
     position: fixed;
-    top: 50%;
-    left: -70px;
+    top: 64px;
+    left: -85px;
     color: black;
   }
   .next-arrow {
     position: fixed;
-    top: 50%;
-    right: -70px;
+    top: 64px;
+    right: -85px;
     color: black;
   }
 }
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
   .carousel-container {
     display: flex;
     flex-direction: column;
-    min-width: 750px;
-    max-width: 750px;
+    width: 100%;
     margin: 2rem -2%;
   }
   .carousel-wrapper {
@@ -315,19 +269,38 @@
   .slide {
     display: inline-block;
     width: 100%;
-    min-height: 600px;
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-size: 2rem;
     padding-bottom: 10%;
+    white-space: normal;
+  }
+  .name {
+    font-size: 1.5rem;
+    font-weight: 400;
+  }
+  .description {
+    font-size: 0.9rem;
+    font-weight: 200;
   }
   .image {
-    width: 700px;
-    height: 400px;
+    width: 100%;
+    height: 60vw;
+  }
+  .title {
+    font-size: 1rem;
+    font-weight: 400;
+    margin-bottom: 5px;
+  }
+  .details {
+    font-size: 0.9rem;
+  }
+  .project-link-container {
+    width: 300px;
   }
   .arrow {
-    height: 80px;
-    width: 80px;
+    height: 50px;
+    max-width: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -337,14 +310,97 @@
   }
   .back-arrow {
     position: fixed;
-    left: 0;
-    top: 50%;
+    top: 90px;
+    left: -85px;
     color: black;
   }
   .next-arrow {
     position: fixed;
-    top: 50%;
-    right: 0;
+    top: 90px;
+    right: -85px;
+    color: black;
+  }
+}
+@media only screen and (min-width: 1025px) {
+  .carousel-container {
+    display: flex;
+    flex-direction: column;
+    width: 910px;
+    margin: 0 -2%;
+  }
+  .carousel-wrapper {
+    width: 100%;
+    user-select: none;
+  }
+  .slide {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 2rem;
+    padding-bottom: 10%;
+    white-space: normal;
+  }
+  .name {
+    font-size: 2.5rem;
+    font-weight: 400;
+  }
+  .description {
+    font-size: 1.1rem;
+    font-weight: 200;
+    width: 910px;
+  }
+  .image-container {
+    width: 910px;
+  }
+  .image {
+    width: 910px;
+    height: 614px;
+  }
+  .title {
+    font-size: 1.5rem;
+    font-weight: 400;
+    margin-bottom: 5px;
+  }
+  .details {
+    font-size: 1.1rem;
+  }
+  .project-link-container {
+    width: 350px;
+    margin-top: 40px;
+  }
+  .project-link {
+    font-size: 1.1rem;
+  }
+  .internet {
+    width: 45px;
+    height: 45px;
+    margin-bottom: 10px;
+  }
+  .github {
+    width: 50px;
+    height: 50px;
+  }
+  .arrow {
+    height: 50px;
+    max-width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 20;
+  }
+  .back-arrow {
+    position: fixed;
+    top: 70px;
+    left: 20vw;
+    color: black;
+  }
+  .next-arrow {
+    position: fixed;
+    top: 70px;
+    right: 20vw;
     color: black;
   }
 }
