--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,36 +1,35 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:300&display=swap");
-
-html {
-  min-height: 100%;
-}
-body {
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  background: linear-gradient(
-    300deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(100, 100, 100, 0.4) 100%
-  );
-  background-repeat: no-repeat;
-  box-sizing: border-box;
-  overflow-x: hidden;
-}
+/* CORE STYLES */
 :root {
   --primary-color: rgba(13, 110, 139, 0.75);
   --overlay-color: rgba(24, 39, 51, 0.85);
   --menu-speed: 0.75s;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
+  line-height: 1.4;
+}
+
 .container {
   max-width: 960px;
   margin: auto;
   overflow: hidden;
   padding: 0 3rem;
 }
+
 .showcase {
   background: var(--primary-color);
   color: #fff;
   height: 100vh;
   position: relative;
 }
+
 .showcase:before {
   content: "";
   background: url("https://images.pexels.com/photos/533923/pexels-photo-533923.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
@@ -42,6 +41,7 @@ body {
   height: 100%;
   z-index: -1;
 }
+
 .showcase .showcase-inner {
   display: flex;
   flex-direction: column;
@@ -50,12 +50,15 @@ body {
   text-align: center;
   height: 100%;
 }
+
 .showcase h1 {
   font-size: 4rem;
 }
+
 .showcase p {
   font-size: 1.3rem;
 }
+
 .btn {
   display: inline-block;
   border: none;
@@ -66,9 +69,11 @@ body {
   transition: opacity 1s ease-in-out;
   text-decoration: none;
 }
+
 .btn:hover {
   opacity: 0.7;
 }
+
 /* MENU STYLES */
 .menu-wrap {
   position: fixed;
@@ -76,16 +81,18 @@ body {
   left: 0;
   z-index: 1;
 }
+
 .menu-wrap .toggler {
   position: absolute;
   top: 0;
   left: 0;
   z-index: 2;
   cursor: pointer;
-  width: 92px;
-  height: 92px;
+  width: 50px;
+  height: 50px;
   opacity: 0;
 }
+
 .menu-wrap .hamburger {
   position: absolute;
   top: 0;
@@ -99,6 +106,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 /* Hamburger Line */
 .menu-wrap .hamburger > div {
   position: relative;
@@ -111,6 +119,7 @@ body {
   justify-content: center;
   transition: all 0.4s ease;
 }
+
 /* Hamburger Lines - Top & Bottom */
 .menu-wrap .hamburger > div::before,
 .menu-wrap .hamburger > div::after {
@@ -122,36 +131,44 @@ body {
   height: 2px;
   background: inherit;
 }
+
 /* Moves Line Down */
 .menu-wrap .hamburger > div::after {
   top: 10px;
 }
+
 /* Toggler Animation */
 .menu-wrap .toggler:checked + .hamburger > div {
   transform: rotate(135deg);
 }
+
 /* Turns Lines Into X */
 .menu-wrap .toggler:checked + .hamburger > div:before,
 .menu-wrap .toggler:checked + .hamburger > div:after {
   top: 0;
   transform: rotate(90deg);
 }
+
 /* Rotate On Hover When Checked */
 .menu-wrap .toggler:checked:hover + .hamburger > div {
   transform: rotate(225deg);
 }
+
 /* Show Menu */
 .menu-wrap .toggler:checked ~ .menu {
   visibility: visible;
 }
+
 .menu-wrap .toggler:checked ~ .menu > div {
   transform: scale(1);
   transition-duration: var(--menu-speed);
 }
+
 .menu-wrap .toggler:checked ~ .menu > div > div {
   opacity: 1;
   transition: opacity 0.4s ease 0.4s;
 }
+
 .menu-wrap .menu {
   position: fixed;
   top: 0;
@@ -164,6 +181,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .menu-wrap .menu > div {
   background: var(--overlay-color);
   border-radius: 50%;
@@ -176,6 +194,7 @@ body {
   transform: scale(0);
   transition: all 0.4s ease;
 }
+
 .menu-wrap .menu > div > div {
   text-align: center;
   max-width: 90vw;
@@ -183,161 +202,16 @@ body {
   opacity: 0;
   transition: opacity 0.4s ease;
 }
+
 .menu-wrap .menu > div > div > ul > li {
   list-style: none;
   color: #fff;
   font-size: 1.5rem;
   padding: 1rem;
 }
+
 .menu-wrap .menu > div > div > ul > li > a {
   color: inherit;
   text-decoration: none;
   transition: color 0.4s ease;
-}
-.navbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  user-select: none;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 200;
-}
-.tab-container {
-  display: flex;
-  align-items: flex-end;
-  text-decoration: none;
-  user-select: none;
-  line-height: 2;
-  text-align: center;
-}
-.dev-tab-container {
-  z-index: 10;
-  transition: 0.3s ease;
-}
-.projects-tab-container {
-  z-index: 8;
-}
-.resume-tab-container {
-  z-index: 6;
-}
-.dev-tab {
-  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 30, 180) 100%);
-  color: white;
-  box-shadow: 1px 1px rgb(20, 20, 60), 2px 2px rgb(20, 20, 60);
-}
-.projects-tab {
-  background-color: white;
-  color: black;
-}
-.resume-tab {
-  background-color: rgb(75, 75, 75);
-  color: white;
-}
-@media only screen and (max-width: 768px) {
-  .navbar {
-    visibility: hidden;
-  }
-  .menu-wrap {
-    visibility: visible;
-  }
-}
-@media only screen and (min-width: 769px) {
-  body {
-    min-height: 100vh;
-  }
-  .menu-wrap {
-    visibility: hidden;
-  }
-  .navbar {
-    height: 75px;
-    padding-bottom: 5px;
-  }
-  .dev-tab-container {
-    z-index: 10;
-    transition: none;
-  }
-  .projects-tab-container {
-    z-index: 8;
-  }
-  .resume-tab-container {
-    z-index: 6;
-  }
-  .dev-tab {
-    width: 200px;
-    height: 50px;
-    font-size: 1.5rem;
-    margin-left: -4px;
-  }
-  .projects-tab,
-  .resume-tab {
-    margin-top: 14px;
-    margin-left: -25px;
-    width: 180px;
-    height: 40px;
-    line-height: 1.8;
-    font-size: 1.3rem;
-    transition: 0.2s ease;
-  }
-  .projects-tab {
-    background-color: white;
-    color: black;
-  }
-  .resume-tab {
-    background-color: rgb(75, 75, 75);
-    color: white;
-  }
-  .dev-right-point {
-    border-top: 25px solid transparent;
-    border-bottom: 25px solid transparent;
-    border-left: 25px solid rgb(0, 30, 180);
-  }
-  .right-point {
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    transition: 0.2s ease;
-  }
-  .projects-tab-container .right-point {
-    border-left: 20px solid white;
-  }
-  .resume-tab-container .right-point {
-    border-left: 20px solid rgb(75, 75, 75);
-  }
-  .projects-tab-container:active .projects-tab {
-    background-color: rgb(75, 75, 75);
-    transition: 0.2s ease;
-  }
-  .projects-tab-container:active .right-point {
-    border-left: 25px solid rgb(75, 75, 75);
-    transition: 0.2s ease;
-  }
-  .projects-tab-container:active .link {
-    color: white;
-    transition: 0.2s ease;
-  }
-  .resume-tab-container:active .resume-tab {
-    background-color: white;
-    transition: 0.2s ease;
-  }
-  .resume-tab-container:active .right-point {
-    border-left: 25px solid white;
-    transition: 0.2s ease;
-  }
-  .resume-tab-container:active .link {
-    color: black;
-    transition: 0.2s ease;
-  }
-  .dev-tab-container:active {
-    margin: 2px -1px -2px 1px;
-  }
-  .dev-tab-container:active .dev-tab {
-    box-shadow: none;
-  }
-  @media (hover: hover) {
-    .projects-tab:hover,
-    .resume-tab:hover {
-      width: 240px;
-      transition: 0.2s ease;
-    }
-  }
 }
