--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,7 @@ body {
   background-repeat: no-repeat;
   box-sizing: border-box;
   overflow-x: hidden;
-}
-:root {
-  --primary-color: rgba(13, 110, 139, 0.75);
-  --overlay-color: rgba(24, 39, 51, 0.85);
-  --menu-speed: 0.75s;
+  width: 100%;
 }
 .container {
   max-width: 960px;
@@ -25,45 +21,14 @@ body {
   overflow: hidden;
   padding: 0 3rem;
 }
-.showcase {
-  background: var(--primary-color);
-  color: #fff;
-  height: 100vh;
-  position: relative;
-}
-.showcase:before {
-  content: "";
-  background: url("https://images.pexels.com/photos/533923/pexels-photo-533923.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260")
-    no-repeat center center/cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-.showcase .showcase-inner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 100%;
-}
-.showcase h1 {
-  font-size: 4rem;
-}
-.showcase p {
-  font-size: 1.3rem;
-}
 .btn {
   display: inline-block;
   border: none;
-  background: var(--primary-color);
-  color: #fff;
+  background: black;
+  color: white;
   padding: 0.75rem 1.5rem;
   margin-top: 1rem;
-  transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-out-out;
   text-decoration: none;
 }
 .btn:hover {
@@ -94,7 +59,7 @@ body {
   width: 30px;
   height: 30px;
   padding: 1rem;
-  background: var(--primary-color);
+  background: black;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -147,6 +112,7 @@ body {
 .menu-wrap .toggler:checked ~ .menu > div {
   transform: scale(1);
   transition: 0.2s ease;
+  height: 116%;
 }
 .menu-wrap .toggler:checked ~ .menu > div > div {
   opacity: 1;
@@ -165,7 +131,7 @@ body {
   justify-content: center;
 }
 .menu-wrap .menu > div {
-  background: var(--overlay-color);
+  background: rgba(0, 0, 0, 0.8);
   border-radius: 50%;
   width: 200vw;
   height: 200vw;
@@ -183,16 +149,18 @@ body {
   opacity: 0;
   transition: opacity 0.2s ease;
 }
-.menu-wrap .menu > div > div > ul > li {
-  list-style: none;
-  color: #fff;
-  font-size: 1.5rem;
-  padding: 1rem;
+.menu-list {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
-.menu-wrap .menu > div > div > ul > li > a {
-  color: inherit;
+.menu-item {
+  font-family: "Montserrat", sans-serif;
+  font-size: 2rem;
+  font-weight: 200;
   text-decoration: none;
-  transition: color 0.2s ease;
+  color: white;
+  margin: 30px 0;
 }
 .navbar {
   display: flex;
@@ -202,37 +170,49 @@ body {
   user-select: none;
   font-family: "Montserrat", sans-serif;
   font-weight: 200;
+  margin: 10px 15px 0 15px;
+  transition: 0.2s ease-out;
 }
-.tab-container {
-  display: flex;
-  align-items: flex-end;
-  text-decoration: none;
-  user-select: none;
-  line-height: 2;
-  text-align: center;
-}
-.dev-tab-container {
+.dev-logo-container,
+.nav-link {
   z-index: 10;
-  transition: 0.3s ease;
 }
-.projects-tab-container {
-  z-index: 8;
+.dev-logo-container {
+  margin-right: 15px;
 }
-.resume-tab-container {
-  z-index: 6;
+.dev-logo {
+  width: 50px;
+  height: 50px;
 }
-.dev-tab {
-  background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 30, 180) 100%);
-  color: white;
-  box-shadow: 1px 1px rgb(20, 20, 60), 2px 2px rgb(20, 20, 60);
-}
-.projects-tab {
-  background-color: white;
+.nav-link {
+  text-align: center;
+  text-decoration: none;
   color: black;
+  margin: 0 15px;
 }
-.resume-tab {
-  background-color: rgb(75, 75, 75);
-  color: white;
+.nav-link::after {
+  display: block;
+  content: attr(title);
+  font-weight: 400;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
+.underline {
+  width: 0px;
+  height: 1px;
+  display: block;
+  background: black;
+  transition: 0.2s ease-out;
+}
+@media (hover: hover) {
+  .nav-link:hover {
+    font-weight: 400;
+  }
+  .nav-link:hover .underline {
+    width: 100%;
+    transition: 0.2s ease-out;
+  }
 }
 @media only screen and (max-width: 768px) {
   .navbar {
@@ -243,101 +223,7 @@ body {
   }
 }
 @media only screen and (min-width: 769px) {
-  body {
-    min-height: 100vh;
-  }
   .menu-wrap {
     visibility: hidden;
-  }
-  .navbar {
-    height: 75px;
-    padding-bottom: 5px;
-  }
-  .dev-tab-container {
-    z-index: 10;
-    transition: none;
-  }
-  .projects-tab-container {
-    z-index: 8;
-  }
-  .resume-tab-container {
-    z-index: 6;
-  }
-  .dev-tab {
-    width: 200px;
-    height: 50px;
-    font-size: 1.5rem;
-    margin-left: -4px;
-  }
-  .projects-tab,
-  .resume-tab {
-    margin-top: 14px;
-    margin-left: -25px;
-    width: 180px;
-    height: 40px;
-    line-height: 1.8;
-    font-size: 1.3rem;
-    transition: 0.2s ease;
-  }
-  .projects-tab {
-    background-color: white;
-    color: black;
-  }
-  .resume-tab {
-    background-color: rgb(75, 75, 75);
-    color: white;
-  }
-  .dev-right-point {
-    border-top: 25px solid transparent;
-    border-bottom: 25px solid transparent;
-    border-left: 25px solid rgb(0, 30, 180);
-  }
-  .right-point {
-    border-top: 20px solid transparent;
-    border-bottom: 20px solid transparent;
-    transition: 0.2s ease;
-  }
-  .projects-tab-container .right-point {
-    border-left: 20px solid white;
-  }
-  .resume-tab-container .right-point {
-    border-left: 20px solid rgb(75, 75, 75);
-  }
-  .projects-tab-container:active .projects-tab {
-    background-color: rgb(75, 75, 75);
-    transition: 0.2s ease;
-  }
-  .projects-tab-container:active .right-point {
-    border-left: 25px solid rgb(75, 75, 75);
-    transition: 0.2s ease;
-  }
-  .projects-tab-container:active .link {
-    color: white;
-    transition: 0.2s ease;
-  }
-  .resume-tab-container:active .resume-tab {
-    background-color: white;
-    transition: 0.2s ease;
-  }
-  .resume-tab-container:active .right-point {
-    border-left: 25px solid white;
-    transition: 0.2s ease;
-  }
-  .resume-tab-container:active .link {
-    color: black;
-    transition: 0.2s ease;
-  }
-  .dev-tab-container:active {
-    margin: 2px -1px -2px 1px;
-  }
-  .dev-tab-container:active .dev-tab {
-    box-shadow: none;
-  }
-  @media (hover: hover) {
-    .projects-tab:hover,
-    .resume-tab:hover {
-      width: 240px;
-      transition: 0.2s ease;
-    }
   }
 }
