--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -102,7 +102,7 @@
   height: 28px;
   margin-bottom: 6px;
 }
-.github {
+.repository {
   width: 30px;
   height: 30px;
 }
@@ -377,7 +377,7 @@
     height: 45px;
     margin-bottom: 10px;
   }
-  .github {
+  .repository {
     width: 50px;
     height: 50px;
   }
