Minor fixes in responsiveness after implementing new navbar design

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -75,20 +75,31 @@
 .project-link:hover {
   color: blue;
 }
+.arrow-container {
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  top: 77px;
+  width: 300px;
+  z-index: 21;
+}
 .arrow {
-  height: 80px;
-  min-width: 15rem;
+  width: 50px;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
   cursor: pointer;
+}
+.back-arrow,
+.next-arrow {
+  color: black;
 }
 .back,
 .next,
 .back-hover,
 .next-hover {
-  position: fixed;
+  position: absolute;
   transition: 0.3s ease;
   font-size: 3rem;
   user-select: none;
@@ -108,19 +119,17 @@
 }
 @media (hover: hover) {
   .arrow:hover .back {
-    padding-left: 35px;
     opacity: 0.3;
   }
   .arrow:hover .next {
-    padding-right: 35px;
     opacity: 0.3;
   }
   .arrow:hover .back-hover {
-    padding-right: 35px;
+    padding-right: 70px;
     opacity: 1;
   }
   .arrow:hover .next-hover {
-    padding-left: 35px;
+    padding-left: 70px;
     opacity: 1;
   }
 }
@@ -165,28 +174,6 @@
   }
   .project-link {
     font-size: 0.8rem;
-  }
-  .arrow {
-    height: 50px;
-    max-width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 20;
-  }
-  .back-arrow {
-    position: fixed;
-    top: 64px;
-    left: -85px;
-    color: black;
-  }
-  .next-arrow {
-    position: fixed;
-    top: 64px;
-    right: -85px;
-    color: black;
   }
 }
 @media only screen and (min-width: 569px) and (max-width: 768px) {
@@ -233,26 +220,11 @@
     width: 300px;
   }
   .arrow {
-    height: 50px;
-    max-width: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 50%;
     cursor: pointer;
-    z-index: 20;
-  }
-  .back-arrow {
-    position: fixed;
-    top: 64px;
-    left: -85px;
-    color: black;
-  }
-  .next-arrow {
-    position: fixed;
-    top: 64px;
-    right: -85px;
-    color: black;
+    z-index: 21;
   }
 }
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
@@ -266,6 +238,10 @@
     width: 100%;
     user-select: none;
   }
+  .arrow-container {
+    width: 450px;
+    top: 88px;
+  }
   .slide {
     display: inline-block;
     width: 100%;
@@ -276,11 +252,11 @@
     white-space: normal;
   }
   .name {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: 400;
   }
   .description {
-    font-size: 0.9rem;
+    font-size: 1.1rem;
     font-weight: 200;
   }
   .image {
@@ -288,37 +264,18 @@
     height: 60vw;
   }
   .title {
-    font-size: 1rem;
+    font-size: 1.5rem;
     font-weight: 400;
     margin-bottom: 5px;
   }
   .details {
-    font-size: 0.9rem;
+    font-size: 1.1rem;
   }
   .project-link-container {
     width: 300px;
   }
-  .arrow {
-    height: 50px;
-    max-width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 20;
-  }
-  .back-arrow {
-    position: fixed;
-    top: 90px;
-    left: -85px;
-    color: black;
-  }
-  .next-arrow {
-    position: fixed;
-    top: 90px;
-    right: -85px;
-    color: black;
+  .project-link {
+    font-size: 1.1rem;
   }
 }
 @media only screen and (min-width: 1025px) {
@@ -331,6 +288,10 @@
   .carousel-wrapper {
     width: 100%;
     user-select: none;
+  }
+  .arrow-container {
+    width: 450px;
+    top: 55px;
   }
   .slide {
     display: inline-block;
@@ -380,27 +341,5 @@
   .repository {
     width: 50px;
     height: 50px;
-  }
-  .arrow {
-    height: 50px;
-    max-width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 20;
-  }
-  .back-arrow {
-    position: fixed;
-    top: 70px;
-    left: 20vw;
-    color: black;
-  }
-  .next-arrow {
-    position: fixed;
-    top: 70px;
-    right: 20vw;
-    color: black;
   }
 }
