--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 html {
   min-height: 100%;
+  width: 100vw;
 }
 body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
@@ -36,6 +37,8 @@ body {
 }
 /* MENU STYLES */
 .menu-wrap {
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
@@ -223,6 +226,9 @@ body {
   }
 }
 @media only screen and (min-width: 769px) {
+  .navbar {
+    visibility: visible;
+  }
   .menu-wrap {
     visibility: hidden;
   }
