--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
-
 .home-container {
   display: flex;
   flex-direction: column;
@@ -67,6 +65,10 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 200;
   font-size: 1rem;
+}
+.dev-name {
+  font-size: 2.5rem;
+  font-weight: 400;
 }
 .title-icon {
   margin: 0 0.25rem;
