--- a/src/components/Resume/Resume.css
+++ b/src/components/Resume/Resume.css
@@ -13,6 +13,7 @@
   font-weight: bold;
   text-decoration: none;
   user-select: contain;
+  z-index: 20;
 }
 .pdf-link:hover .view {
   color: blue;
