--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ body {
   flex: none;
   width: 100%;
   height: 2px;
-  background: #fff;
+  background: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -171,8 +171,6 @@ body {
   justify-content: flex-start;
   align-items: center;
   user-select: none;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 200;
   margin: 10px 15px 0 15px;
   transition: 0.2s ease-out;
 }
@@ -188,6 +186,8 @@ body {
   height: 50px;
 }
 .nav-link {
+  font-family: "Montserrat", sans-serif;
+  font-weight: normal;
   text-align: center;
   text-decoration: none;
   color: black;
@@ -196,7 +196,6 @@ body {
 .nav-link::after {
   display: block;
   content: attr(title);
-  font-weight: 400;
   height: 0;
   overflow: hidden;
   visibility: hidden;
@@ -205,16 +204,17 @@ body {
   width: 0px;
   height: 1px;
   display: block;
-  background: black;
+  background: rgb(0, 0, 0);
   transition: 0.2s ease-out;
 }
 @media (hover: hover) {
-  .nav-link:hover {
-    font-weight: 400;
-  }
   .nav-link:hover .underline {
     width: 100%;
     transition: 0.2s ease-out;
+  }
+  .nav-link:hover {
+    font-weight: bold;
+    margin-top: -1px;
   }
 }
 @media only screen and (max-width: 768px) {
