--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300&display=swap");
-
+#root {
+  min-width: 100vw;
+  min-height: 100vh;
+}
 html {
-  min-height: 100%;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
 }
 body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
@@ -15,6 +18,7 @@ body {
   box-sizing: border-box;
   overflow-x: hidden;
   width: 100%;
+  height: 100%;
 }
 .container {
   max-width: 960px;
@@ -37,8 +41,8 @@ body {
 }
 /* MENU STYLES */
 .menu-wrap {
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
   position: fixed;
   top: 0;
   left: 0;
@@ -217,7 +221,7 @@ body {
     color: crimson;
   }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1023px) {
   .navbar {
     visibility: hidden;
   }
@@ -225,7 +229,7 @@ body {
     visibility: visible;
   }
 }
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 1024px) {
   .navbar {
     visibility: visible;
   }
