--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,19 +1,48 @@
 .home-container {
   display: flex;
-  flex-direction: column;
-  user-select: none;
+  justify-content: space-between;
   align-items: center;
+  height: 100%;
+  user-select: none;
+  margin-top: 20px;
+}
+.about-section {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.1rem;
+  padding: 15px;
+  white-space: normal;
 }
 .profile-figure {
   text-align: center;
+  width: 50%;
+  min-width: 250px;
+  max-width: 250px;
+}
+.about-summary {
+  width: 50%;
+  min-width: 250px;
+  max-width: 500px;
+  margin-top: 20px;
+  background: white;
+  border-radius: 20px;
+  padding: 10px;
 }
 .profile {
   height: 200px;
   border-radius: 50%;
 }
+.dev-name {
+  font-size: 2rem;
+  font-weight: 600;
+}
 .job-title {
   font-family: "Montserrat", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 200;
   margin: 1rem 0;
 }
@@ -23,16 +52,23 @@
   justify-content: center;
   align-items: center;
 }
+.about-summary {
+  white-space: normal;
+  width: 80%;
+  min-width: 200px;
+  text-align: start;
+  margin-top: 0px;
+}
 .skills-container {
-  position: fixed;
-  top: 2%;
-  right: 0;
   display: flex;
   flex-direction: column;
   text-align: center;
+  width: 100%;
+  min-width: 400px;
+  max-width: 400px;
 }
 .header-container {
-  width: 10rem;
+  width: 100%;
   height: 4rem;
   margin: 0;
   border-top-left-radius: 25px;
@@ -52,10 +88,9 @@
 }
 .figure-container {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center;
-  width: 10rem;
+  align-items: baseline;
   border-bottom-left-radius: 25px;
   background: linear-gradient(
     135deg,
@@ -65,10 +100,17 @@
   font-family: "Montserrat", sans-serif;
   font-weight: 200;
   font-size: 1rem;
+  width: 100%;
 }
-.dev-name {
-  font-size: 2.5rem;
-  font-weight: 400;
+.figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 125px;
+  height: 125px;
+  margin: 0;
+  text-align: center;
 }
 .title-icon {
   margin: 0 0.25rem;
@@ -81,24 +123,132 @@
   width: 40px;
   height: 40px;
 }
-@media only screen and (max-width: 768px) {
+.mobile {
+  width: 50px;
+  height: 50px;
+}
+@media only screen and (max-width: 1023px) {
+  .about-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 310px;
+  }
+  .about-summary {
+    width: 300px;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  .about-description {
+    font-size: 1.1rem;
+  }
   .home-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+    justify-content: center;
+    align-items: center;
   }
   .skills-container {
-    position: static;
+    min-width: 300px;
+    max-width: 300px;
+  }
+  .profile-figure {
+    margin-top: 0;
   }
   .header-container {
     border-top-right-radius: 25px;
-    width: 18rem;
+    width: 100%;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 2px 1px rgba(0, 0, 0, 0.4),
       0px 2px 1px rgba(0, 0, 0, 0.5), 0px 3px 1px rgba(0, 0, 0, 0.4);
   }
   .figure-container {
     border-bottom-left-radius: 0;
-    width: 18rem;
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 1024px) and (max-width: 1279px) {
+  .about-summary {
+    background: mediumseagreen;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border-bottom-left-radius: 4px;
+    -webkit-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
+    font-size: 1.25rem;
+    color: white;
+    line-height: 1.3;
+    margin: 0;
+    max-width: 300px;
+    padding: 15px;
+    position: relative;
+  }
+  .profile-figure {
+    margin: 100px 0 0 0;
+  }
+  .speech-arrow {
+    border-right: 21px solid transparent;
+    border-top: 20px solid rgba(0, 0, 0, 0.2);
+    bottom: -25px;
+    position: absolute;
+    left: 5px;
+  }
+  .speech-arrow::before {
+    border-right: 27px solid transparent;
+    border-top: 23px solid rgb(180, 180, 180);
+    bottom: 2px;
+    content: "";
+    position: absolute;
+    left: 2px;
+  }
+  .speech-arrow::after {
+    border-right: 21px solid transparent;
+    border-top: 21px solid mediumseagreen;
+    bottom: 4px;
+    content: "";
+    position: absolute;
+    left: 0;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  .about-summary {
+    background: mediumseagreen;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border-bottom-left-radius: 4px;
+    -webkit-box-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 0 rgba(0, 0, 0, 0.2);
+    font-size: 1.5rem;
+    color: white;
+    line-height: 1.3;
+    margin: 0;
+    max-width: 550px;
+    padding: 15px;
+    position: relative;
+  }
+  .profile-figure {
+    margin: 50px 0 0 0;
+  }
+  .speech-arrow {
+    border-right: 21px solid transparent;
+    border-top: 20px solid rgba(0, 0, 0, 0.2);
+    bottom: -25px;
+    position: absolute;
+    left: 5px;
+  }
+  .speech-arrow::before {
+    border-right: 27px solid transparent;
+    border-top: 23px solid rgb(180, 180, 180);
+    bottom: 2px;
+    content: "";
+    position: absolute;
+    left: 0px;
+  }
+  .speech-arrow::after {
+    border-right: 21px solid transparent;
+    border-top: 21px solid mediumseagreen;
+    bottom: 4px;
+    content: "";
+    position: absolute;
+    left: 0;
   }
 }
