--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,56 +1,71 @@
 .carousel-container {
-  width: 100%;
-  height: 100%;
   display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: space-around;
+  width: 100%;
+  max-width: 910px;
+  margin: 0 -2%;
 }
 .carousel {
   overflow-x: hidden;
   white-space: nowrap;
   width: 100%;
 }
+.carousel-wrapper {
+  width: 100%;
+  user-select: none;
+}
+.arrow-container {
+  width: 450px;
+  top: 88px;
+}
 .slide {
   display: inline-block;
   height: 100%;
   width: 100%;
+  text-align: center;
   font-family: "Montserrat", sans-serif;
-  list-style: none;
+  font-size: 2rem;
+  padding-bottom: 10%;
+  white-space: normal;
 }
 .slide-contents {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  white-space: normal;
-}
-.image-container {
-  width: 90%;
-  height: 100%;
   margin: 0;
-  white-space: normal;
 }
-.description {
-  margin-top: 5px;
-  font-size: 1rem;
-}
-.name {
-  font-size: 3rem;
-  font-weight: 200;
-  margin: 0;
+.header {
+  margin: 20px auto 0 auto;
+  font-size: 2.5rem;
+  font-weight: 400;
 }
 .technologies-container,
 .description {
   text-align: left;
   white-space: normal;
 }
+.description {
+  font-size: 1.1rem;
+  font-weight: 200;
+  padding: 10px;
+}
+figure.image-container {
+  width: 90%;
+  height: 100%;
+  white-space: normal;
+  margin: 10px auto;
+}
+.image {
+  width: 100%;
+  max-width: 810px;
+  height: 60.4vw;
+  max-height: 530px;
+}
 .title {
   font-size: 1.5rem;
-  font-weight: 100;
-  margin-bottom: 0;
+  font-weight: 400;
 }
 .details {
-  font-size: 1rem;
-  font-weight: 100;
+  font-size: 1.1rem;
 }
 .title-icon {
   margin: 0 0 5px 0;
@@ -81,7 +96,8 @@
   justify-content: space-between;
   position: absolute;
   top: 77px;
-  width: 300px;
+  width: 84%;
+  max-width: 810px;
   z-index: 21;
 }
 .arrow {
@@ -103,6 +119,7 @@
   position: absolute;
   transition: 0.3s ease;
   font-size: 3rem;
+  font-weight: 200;
   user-select: none;
 }
 .back-hover,
@@ -134,214 +151,33 @@
     opacity: 1;
   }
 }
-@media only screen and (max-width: 568px) {
-  .carousel-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 2rem -2%;
+@media only screen and (max-width: 320px) {
+  .header {
+    font-size: 1.25rem;
+    margin-bottom: 0;
+    line-height: 1;
   }
-  .carousel-wrapper {
-    width: 100%;
-    user-select: none;
-  }
-  .slide {
-    display: inline-block;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 2rem;
-    padding-bottom: 10%;
-    white-space: normal;
-  }
-  .name {
-    font-size: 1.5rem;
-    font-weight: 400;
-  }
-  .description {
-    font-size: 0.9rem;
-    font-weight: 200;
-  }
-  .image {
-    width: 100%;
-    height: 60vw;
-  }
-  .title {
-    font-size: 1rem;
-    font-weight: 400;
-    margin-bottom: 5px;
-  }
-  .details {
-    font-size: 0.9rem;
-  }
-  .project-link {
-    font-size: 0.8rem;
+  .back,
+  .back-hover,
+  .next,
+  .next-hover {
+    height: 100%;
+    font-size: 22px;
+    line-height: 1;
   }
 }
-@media only screen and (min-width: 569px) and (max-width: 768px) {
-  .carousel-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 2rem -2%;
+@media only screen and (min-width: 321px) and (max-width: 667px) {
+  .header {
+    font-size: 6vw;
+    margin-bottom: 0;
+    line-height: 1;
   }
-  .carousel-wrapper {
-    width: 100%;
-    user-select: none;
-  }
-  .slide {
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 2rem;
-    padding-bottom: 10%;
-    white-space: normal;
-  }
-  .name {
-    font-size: 1.5rem;
-    font-weight: 400;
-  }
-  .description {
-    font-size: 0.9rem;
-    font-weight: 200;
-  }
-  .image {
-    width: 100%;
-    height: 60vw;
-  }
-  .title {
-    font-size: 1rem;
-    font-weight: 400;
-    margin-bottom: 5px;
-  }
-  .details {
-    font-size: 0.9rem;
-  }
-  .project-link-container {
-    width: 300px;
-  }
-  .arrow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    z-index: 21;
-  }
-}
-@media only screen and (min-width: 769px) and (max-width: 1024px) {
-  .carousel-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 2rem -2%;
-  }
-  .carousel-wrapper {
-    width: 100%;
-    user-select: none;
-  }
-  .arrow-container {
-    width: 450px;
-    top: 88px;
-  }
-  .slide {
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 2rem;
-    padding-bottom: 10%;
-    white-space: normal;
-  }
-  .name {
-    font-size: 2.5rem;
-    font-weight: 400;
-  }
-  .description {
-    font-size: 1.1rem;
-    font-weight: 200;
-  }
-  .image {
-    width: 100%;
-    height: 60vw;
-  }
-  .title {
-    font-size: 1.5rem;
-    font-weight: 400;
-    margin-bottom: 5px;
-  }
-  .details {
-    font-size: 1.1rem;
-  }
-  .project-link-container {
-    width: 300px;
-  }
-  .project-link {
-    font-size: 1.1rem;
-  }
-}
-@media only screen and (min-width: 1025px) {
-  .carousel-container {
-    display: flex;
-    flex-direction: column;
-    width: 910px;
-    margin: 0 -2%;
-  }
-  .carousel-wrapper {
-    width: 100%;
-    user-select: none;
-  }
-  .arrow-container {
-    width: 450px;
-    top: 88px;
-  }
-  .slide {
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 2rem;
-    padding-bottom: 10%;
-    white-space: normal;
-  }
-  .name {
-    font-size: 2.5rem;
-    font-weight: 400;
-    margin-top: 32px;
-  }
-  .description {
-    font-size: 1.1rem;
-    font-weight: 200;
-    width: 910px;
-  }
-  .image-container {
-    width: 910px;
-  }
-  .image {
-    width: 910px;
-    height: 614px;
-  }
-  .title {
-    font-size: 1.5rem;
-    font-weight: 400;
-    margin-bottom: 5px;
-  }
-  .details {
-    font-size: 1.1rem;
-  }
-  .project-link-container {
-    width: 350px;
-    margin-top: 40px;
-  }
-  .project-link {
-    font-size: 1.1rem;
-  }
-  .internet {
-    width: 45px;
-    height: 45px;
-    margin-bottom: 10px;
-  }
-  .repository {
-    width: 50px;
-    height: 50px;
+  .back,
+  .back-hover,
+  .next,
+  .next-hover {
+    height: 100%;
+    font-size: 7vw;
+    line-height: 1;
   }
 }
