--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -132,15 +132,51 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 310px;
+    width: 300px;
+    margin-top: 200px;
   }
   .about-summary {
-    width: 300px;
-    margin-bottom: 15px;
-    text-align: center;
+    position: absolute;
+    bottom: 550px;
+    background: mediumseagreen;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    border-bottom-left-radius: 4px;
+    -webkit-box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 0 rgba(0, 0, 0, 0.2);
+    font-size: 1.25rem;
+    color: white;
+    line-height: 1.3;
+    max-width: 300px;
+    padding: 15px;
+    position: relative;
+    margin-bottom: -550px;
   }
   .about-description {
     font-size: 1.1rem;
+  }
+  .speech-arrow {
+    border-right: 21px solid transparent;
+    border-top: 20px solid rgba(0, 0, 0, 0.2);
+    bottom: -25px;
+    position: absolute;
+    right: 50px;
+  }
+  .speech-arrow::before {
+    border-right: 27px solid transparent;
+    border-top: 23px solid rgb(180, 180, 180);
+    bottom: 2px;
+    content: "";
+    position: absolute;
+    left: 2px;
+  }
+  .speech-arrow::after {
+    border-right: 21px solid transparent;
+    border-top: 21px solid mediumseagreen;
+    bottom: 4px;
+    content: "";
+    position: absolute;
+    left: 0;
   }
   .home-container {
     display: flex;
@@ -153,7 +189,7 @@
     max-width: 300px;
   }
   .profile-figure {
-    margin-top: 0;
+    margin: 0;
   }
   .header-container {
     border-top-right-radius: 25px;
