--- a/src/App.css
+++ b/src/App.css
@@ -164,11 +164,14 @@ body {
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   user-select: none;
   margin: 10px 15px 0 15px;
   transition: 0.2s ease-out;
+}
+.nav-link-container {
+  display: flex;
 }
 .dev-logo-container,
 .nav-link {
@@ -213,7 +216,7 @@ body {
     color: crimson;
   }
 }
-@media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 568px) {
   .navbar {
     visibility: hidden;
   }
@@ -221,7 +224,7 @@ body {
     visibility: visible;
   }
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 569px) {
   .navbar {
     visibility: visible;
   }
