--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -15,8 +15,9 @@
   align-items: flex-start;
   font-family: "Montserrat", sans-serif;
   font-size: 1.1rem;
-  padding: 15px;
+  padding: 15px 0;
   white-space: normal;
+  box-shadow: 0px 7px 10px -10px rgba(0, 0, 0, 0.5);
 }
 .profile-figure {
   text-align: center;
@@ -64,7 +65,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  background: rgba(128, 128, 128, 0.2);
+  background: rgba(0, 162, 255, 0.08);
+  box-shadow: 0px 4px 8px -8px rgba(0, 0, 0, 0.5);
 }
 .skills-container {
   display: flex;
@@ -124,7 +126,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 300px;
+    width: 100%;
     margin-top: 200px;
   }
   .about-summary {
