--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -105,17 +105,25 @@
 .title-icon {
   margin: 0 0.25rem;
 }
-.github {
-  width: 35px;
-  height: 35px;
-}
 .linkedin {
   width: 40px;
   height: 40px;
+  transition: 0.2s;
+}
+.github {
+  width: 35px;
+  height: 35px;
+  transition: 0.2s;
 }
 .mongodb {
   width: 50px;
   height: 50px;
+}
+.linkedin:hover {
+  fill: #0077b5;
+}
+.github:hover {
+  fill: #bd2c00;
 }
 .mobile {
   width: 45px;
