--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body {
   overflow-x: hidden;
   width: 100%;
   height: 100%;
+  font-family: "Montserrat", sans-serif;
 }
 section {
   width: 100%;
