--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
 #root {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vw;
 }
 html {
   width: 100%;
@@ -21,23 +22,25 @@ section {
   width: 100%;
 }
 .navbar-container {
-  width: 100%;
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  background: rgb(0, 26, 98);
+  background: rgb(0, 5, 36);
   z-index: 4;
 }
 .scrollnav-container {
+  width: 100vw;
   position: fixed;
   top: 0;
-  width: 100%;
-  background: rgb(0, 26, 98);
+  background: rgb(0, 5, 36);
   z-index: 3;
 }
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   user-select: none;
   margin: 0 auto;
@@ -45,6 +48,7 @@ section {
   box-shadow: 0px 4px goldenrod;
   height: 40px;
   width: 100%;
+  max-width: 568px;
 }
 .navbar-shadow {
   height: 4px;
@@ -58,20 +62,13 @@ section {
 .nav-link {
   z-index: 10;
 }
-.dev-logo-container {
-  margin-right: 15px;
-}
-.dev-logo {
-  width: 50px;
-  height: 50px;
-}
 .nav-link {
   font-family: "Montserrat", sans-serif;
   font-weight: normal;
   text-align: center;
   text-decoration: none;
   color: white;
-  margin: 0 5vw;
+  /* margin: 0 5vw; */
 }
 .nav-link::after {
   display: block;
@@ -91,7 +88,7 @@ section {
 @media (hover: hover) {
   .nav-link:hover .underline {
     width: 100%;
-    transition: 0.2s ease-out;
+    transition: 0.2s ease;
   }
   .nav-link:hover {
     color: goldenrod;
