--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap");
 #root {
   width: 100vw;
   height: 100vw;
@@ -40,7 +39,7 @@ section {
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   user-select: none;
   margin: 0 auto;
